галерея на светлой версии есть

--- a/index.html
+++ b/index.html
@@ -140,6 +140,33 @@
   </section>
 </main>
 
+<section class="gallery">
+  <!-- Первое изображение -->
+  <div class="gallery__item gallery__item--horizontal">
+    <img src="images/sunset.png" alt="закат">
+  </div>
+
+  <!-- Второе изображение -->
+  <div class="gallery__item gallery__item--vertical">
+    <img src="images/ice-cream.png" alt="мороженое">
+  </div>
+
+  <!-- Третье изображение -->
+  <div class="gallery__item gallery__item--square">
+    <img src="images/tape.png" alt="Касета">
+  </div>
+
+  <!-- Четвертое изображение -->
+  <div class="gallery__item gallery__item--vertical">
+    <img src="images/books.png" alt="Книги">
+  </div>
+
+  <!-- Пятое изображение -->
+  <div class="gallery__item gallery__item--horizontal">
+    <img src="images/street.png" alt="Улица">
+  </div>
+</section>
+
   <!-- Подвал -->
   <footer class="footer">
     <p class="footer__text">&copy; 2023 Сложно сосредоточиться</p>
