--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 
   <!-- Подвал -->
   <footer class="footer">
-    <p class="footer__text">&copy; 2023 Сложно сосредоточиться</p>
+    <div class="footer__content">
+      <span class="footer__text">focus</span>
+    </div>
   </footer>
 
   <!-- Скрипт для переключения тем -->
